@@ -83,7 +83,7 @@
 42,-1,6,1,-1,0,0,10,1,no,0,0,0,weapon,0	//MC_MAMMONITE#Mammonite#
 43,0,0,0,0,0,0,10,0,no,0,0,0,none,0	//AC_OWL#Owl's Eye#
 44,0,0,0,0,0,0,10,0,no,0,0,0,none,0	//AC_VULTURE#Vulture's Eye#
-45,0,6,4,0,0x3,1,10,1,no,0,0,0,weapon,0	//AC_CONCENTRATION#Improve Concentration#
+45,0,6,4,0,0x3,3,10,1,no,0,0,0,weapon,0	//AC_CONCENTRATION#Improve Concentration#
 46,-9,8,1,-1,0,0,10,2,no,0,0,0,weapon,0	//AC_DOUBLE#Double Strafe#
 47,-9,6,2,-1,0x2,2,10,1,no,0,0,0,weapon,2	//AC_SHOWER#Arrow Shower#
 48,-1,8,0,-1,0,0,10,2,no,0,0,0,weapon,0	//TF_DOUBLE#Double Attack#
